# docs/api/openapi.yaml
@@ -41,9 +41,7 @@ paths:
           content:
             application/json:
               schema:
-                properties:
-                  saketomo:
-                    $ref: '#/components/schemas/saketomo'
+                $ref: '#/components/schemas/saketomo'
         400:
           description: http ステータスコード 400 error
           content:
