# src/main/java/javajo/ponsyukey/controller/SaketomoApiController.java
@@ -1,14 +1,12 @@
 package javajo.ponsyukey.controller;
 
-import io.swagger.annotations.ApiParam;
-import javajo.ponsyukey.model.SakeResponse;
+import javajo.ponsyukey.model.CreateSaketomo;
+import javajo.ponsyukey.model.Saketomo;
 import javajo.ponsyukey.model.SaketomoResponse;
-import javajo.ponsyukey.service.SakeService;
 import javajo.ponsyukey.service.SaketomoService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.context.request.NativeWebRequest;
@@ -36,5 +34,10 @@ public class SaketomoApiController implements SaketomoApi {
     public ResponseEntity<SaketomoResponse> getSaketomo(String saketomoId) {
         SaketomoResponse saketomoResponse = saketomoService.getSaketomoResponse(saketomoId);
         return new ResponseEntity<SaketomoResponse>(saketomoResponse, HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<Saketomo> createSaketomo(CreateSaketomo createSaketomo) {
+        return new ResponseEntity<Saketomo>(new Saketomo(), HttpStatus.OK);
     }
 }
